--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,9 @@
             </div>
             <div>
                <a href="https://github.com/SahityaRoy" class="btn">View profile</a>
-               <a href="index2.html" class="btn">Back</a>
+               <a href="index4.html" class="btn">Next</a>
+
+               
             </div>
          </div>
       </div>
