adding payment donation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-btn" href="https://forms.gle/XRqaRiaLdNxh7Ykk6">Register</a>
-                        </li>                            
+                        </li>  
+                        <li class="nav-item">
+                            <a class="nav-link nav-btn" href="buymeacoffee.com/sahityaroy">Support</a>
+                        </li>  
                     </ul>
                 </div>
             </nav>
@@ -58,7 +61,7 @@
                         <h6>Are you ready to Learn?</h6>
                         <h1>Learn With fun <br> on <span>any schedule</span></h1>
                         <p>Now a days programming is one of the booming career industry needs good programmers so you have to learn programming</p>
-                        <button class="get-btn">Get Started</button>
+                        <button class="get-btn" href="buymeacoffee.com/sahityaroy">Donate</button>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 ml-auto">
