--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link nav-btn" href="https://forms.gle/XRqaRiaLdNxh7Ykk6">Register</a>
                         </li>  
                         <li class="nav-item">
-                            <a class="nav-link nav-btn" href="buymeacoffee.com/sahityaroy">Support</a>
+                            <a class="nav-link nav-btn" href="https://www.buymeacoffee.com/sahityaroy">Support</a>
                         </li>  
                     </ul>
                 </div>
