--- a/index4.html
+++ b/index4.html
@@ -22,6 +22,7 @@
             </div>
             <div>
                <a href="https://www.linkedin.com/in/priya-chandak-ba0a6b178/" class="btn">View profile</a>
+               <a href="contributor1.html" class="btn">Next</a>
                
             </div>
          </div>
