--- a/contributor1.html
+++ b/contributor1.html
@@ -13,11 +13,11 @@
          </div>
          <div class="lower-container">
             <div>
-               <h3>Priya Chandak</h3>
-               <h4>Btech CSE </h4>
+               <h3>Aakanksha Bhende</h3>
+               <h4>Btech CSE (contributor) </h4>
             </div>
             <div>
-               <p>Let's connect for knowledge sharing
+               <p>Thanks for your contribution in this project
                </p>
             </div>
             <div>
