--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     <div class="header-details">
                         <h6>Are you ready to Learn?</h6>
                         <h1>Learn With fun <br> on <span>any schedule</span></h1>
-                        <p>Now a days programming is one of the booming career industry needs good programmers so you have to learn programming</p>
+                        <!-- <p>Now a days programming is one of the booming career industry needs good programmers so you have to learn programming</p> -->
+                        <p>Now-a-days programming is one of the booming career in industry. It is profitable for one to learn programming as there is an 
+                            enormous demand for good programmers in the industry.</p>
                         <button class="get-btn" href="buymeacoffee.com/sahityaroy">Donate</button>
                     </div>
                 </div>
@@ -128,8 +130,10 @@
                 <div class="card">
                     <img src="images/picture/card-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">C++ From Basic To advance</h5>
-                        <p class="card-text">Geeting started with CPP</p>
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">C++ From Basic To Advance</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Getting started with CPP</p>
                         <a class="nav-link nav-btn" href="https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ">Enroll</a>
                     <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->                 
                     </div>
@@ -141,7 +145,8 @@
                             </div>
                             <div class="date d-flex">
                                 <img src="images/icon/people.png" alt="">
-                                <h6>Avilable</h6>
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
                                 
                             </div>                            
                         </div>
@@ -151,7 +156,8 @@
                     <img src="images/picture/card-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">JAVA</h5>
-                        <p class="card-text">Kickstart your journey in java</p>
+                        <!-- <p class="card-text">Kickstart your journey in java</p> -->
+                        <p class="card-text">Kickstart your journey in Java</p>
                         <a class="nav-link nav-btn" href="https://www.youtube.com/watch?v=WOUpjal8ee4&list=PLsyeobzWxl7oZ-fxDYkOToURHhMuWD1BK">Enroll</a>                 
                     </div>
                     <div class="card-footer">
@@ -162,7 +168,8 @@
                             </div>
                             <div class="date d-flex">
                                 <img src="images/icon/people.png" alt="">
-                                <h6>Avilable</h6>
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
                             </div>                          
                         </div>
                     </div>                   
@@ -171,8 +178,8 @@
                     <img src="images/picture/card-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">C Programming</h5>
-                        <p class="card-text">Kickstart you coding journey</p>
-                           
+                        <!-- <p class="card-text">Kickstart you coding journey</p> -->
+                        <p class="card-text">Kickstart you coding journey with C</p>
                         <a class="nav-link nav-btn" href="https://www.youtube.com/watch?v=MoqYPc43ssk&list=PLXthElPLs7ZaGXGI-_ToQ670nr1RAtjRB">Enroll</a>               
                     </div>
                     <div class="card-footer">
@@ -183,7 +190,8 @@
                             </div>
                             <div class="date d-flex">
                                 <img src="images/icon/people.png" alt="">
-                                <h6>Avilable</h6>
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
                             </div>                            
                         </div>
                     </div>                    
@@ -201,8 +209,10 @@
             <div class="row">
                 <div class="col-md-5 d-flex align-items-center">
                     <div class="video-details">
-                        <h2>Helping people grow their careers, every day!</h2>
-                        <p>If you want to start yout career in programming then this is for you can learn programming free of cost so stay tuned with us and if you have any quary then register yorself.</p>
+                        <!-- <h2>Helping people grow their careers, every day!</h2> -->
+                        <h2>Helping people to grow their careers, every day!</h2>
+                        <!-- <p>If you want to start yout career in programming then this is for you can learn programming free of cost so stay tuned with us and if you have any quary then register yorself.</p> -->
+                        <p>If you want to start your career in programming then this is for you, You can learn programming free of cost so stay tuned with us and if you have any query then register yourself.</p>
                         <a class="nav-link" href="https://www.youtube.com/channel/UCqXTIC8hmyigUtYGVykQsug">Let's Start</a>
                     </div>
                 </div>
