--- a/contributor1.html
+++ b/contributor1.html
@@ -22,7 +22,7 @@
             </div>
             <div>
                <a href="https://www.linkedin.com/in/aakanksha-bhende/" class="btn">View profile</a>
-               <a href="index2.html" class="btn">Previous</a>
+               <a href="contributor2.html" class="btn">Next</a>
                
             </div>
          </div>
