Added hovarable effect.

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                             <a class="nav-link" href="https://sahityaroy.hashnode.dev/">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-btn" href="https://forms.gle/XRqaRiaLdNxh7Ykk6">Register</a>
+                            <a class="nav-link nav-btn get-btn" href="https://forms.gle/XRqaRiaLdNxh7Ykk6">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-btn" href="https://www.buymeacoffee.com/sahityaroy">Support</a>
+                            <a class="nav-link nav-btn get-btn" href="https://www.buymeacoffee.com/sahityaroy">Support</a>
                         </li>
                     </ul>
                 </div>
