--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
    <head>
       <title>Profile Card</title>
       <link rel="stylesheet" type="text/css" href="style2.css">
+      <link rel="icon" href='favicon.png' type="image/png">
    </head>
    <body>
       <div class="card-container">
