--- a/index.html
+++ b/index.html
@@ -410,7 +410,21 @@
             $(this).toggleClass("fill-back").siblings();
         });
     </script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+
+    <script src="script.js"></script>
+
+    <script>
+
+  function addDarkmodeWidget() {
+
+    new Darkmode().showWidget();
+
+  }
+
+  window.addEventListener('load', addDarkmodeWidget);
+
+</script>
     <script>
         function myFunction() {
           var x = document.getElementById("navbarNav");
