--- a/index.html
+++ b/index.html
@@ -220,6 +220,270 @@
             </div>
         </div>
     </section>
+
+    <section class="course-section sec-padding" id="course">
+    	<div class="container">
+    		<div class="card-deck">
+                <div class="card">
+                    <img src="images/picture/card-4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">Python Programming</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Getting started with Python</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=kqtD5dpn9C8">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/picture/card-5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">Django Framework</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Master Django Skills</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=UmljXZIypDc&list=PL-osiE80TeTtoQCKZ03TU5fNfx2UY6U4p">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/picture/card-6.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">Html</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Learn HTML to create amazing web pages</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=dD2EISBDjWM&list=PLr6-GrHUlVf_ZNmuQSXdS197Oyr1L9sPB">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="course-section sec-padding" id="course">
+    	<div class="container">
+    		<div class="card-deck">
+                <div class="card">
+                    <img src="images/picture/card-7.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">CSS</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Design Amazing Web Pages with CSS</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=qKoajPPWpmo&list=PLr6-GrHUlVf8JIgLcu3sHigvQjTw_aC9C">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/picture/card-8.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">Javascript</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Kickstart you coding journey in Scripting</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=2md4HQNRqJA&list=PLRAV69dS1uWSxUIk5o3vQY2-_VKsOpXLD">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/picture/card-9.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">React JS</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Learn Amazing Front-end Framework</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=QFaFIcGhPoM&list=PLC3y8-rFHvwgg3vaYJgHGnModB54rxOk3">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    		</div>
+    	</div>
+    </section>
+
+
+    <section class="course-section sec-padding" id="course">
+    	<div class="container">
+    		<div class="card-deck">
+                <div class="card">
+                    <img src="images/picture/card-10.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">Angular</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Head for Google's Framework</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=0eWrpsCLMJQ&list=PLC3y8-rFHvwhBRAgFinJR8KHIrCdTkZcZ">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/picture/card-11.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">Kotlin</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Kickstart you coding journey in Kotlin</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=VEqhzCFmEQI&list=PLlxmoA0rQ-LwgK1JsnMsakYNACYGa1cjR">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/picture/card-12.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">C++ From Basic To advance</h5> -->
+                        <h5 class="card-title">SQL</h5>
+                        <!-- <p class="card-text">Geeting started with CPP</p> -->
+                        <p class="card-text">Start Uderstanding Databases</p>
+                        <a class="nav-link nav-btn"
+                            href="https://www.youtube.com/watch?v=7GVFYt6_ZFM&list=PL08903FB7ACA1C2FB">Enroll</a>
+                        <!--<button class="buy-btn" herf "https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ"></button>Enroll</button> -->
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <div class="date d-flex">
+                                <img src="images/icon/calendar.png" alt="">
+
+                            </div>
+                            <div class="date d-flex">
+                                <img src="images/icon/people.png" alt="">
+                                <!-- <h6>Avilable</h6> -->
+                                <h6>Available</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    		</div>
+    	</div>
+    </section>
+
+
     <!--
     ==============
         Video 
