--- a/index.html
+++ b/index.html
@@ -695,7 +695,12 @@
 
   function addDarkmodeWidget() {
 
-    new Darkmode().showWidget();
+    new Darkmode({
+                bottom: '41px',
+                right: '32px',
+                time: '0.5s',
+                label: '🌓'
+            }).showWidget();
 
   }
 
