blog and blog pages added

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-school blog</title>
-    
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
        <link rel="stylesheet" href="blog.css">
@@ -60,7 +60,7 @@
                 <div class="container">
                   <div class="card-columns">
                     <div class="card">
-                      <a href="#">
+                      <a href="./blogs/blog1.html">
                       <img class="card-img-top" src="./images/blogimages/austin-distel-wD1LRb9OeEo-unsplash.jpg " alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Do you know how the web developer teams are organised.</h5>
@@ -71,7 +71,7 @@
                       </a>
                     </div>
                     <div class="card">
-                      <a href="#">
+                      <a href="/blogs/blog5.html">
                       <img class="card-img-top" src="./images/blogimages/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Modern client-side routing: the App History API</h5>
@@ -81,7 +81,7 @@
                       </a>
                     </div>
                     <div class="card">
-                      <a href="#">
+                      <a href="/blogs/blog2.html">
                       <img class="card-img-top" src="./images/blogimages/nathan-da-silva-k-rKfqSm4L4-unsplash.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Using CSS Module Scripts to import stylesheets.</h5>
@@ -91,7 +91,7 @@
                       </a>
                     </div>
                     <div class="card">
-                      <a href="#">
+                      <a href="/blogs/blog6.html">
                       <img class="card-img-top" src="./images/blogimages/h-heyerlein-ndja2LJ4IcM-unsplash.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">A performance-focused workflow based on Google tools</h5>
@@ -101,7 +101,7 @@
                       </a>
                     </div>
                     <div class="card">
-                      <a href="#">
+                      <a href="/blogs/blog3.html">
                       <img class="card-img-top" src="./images/blogimages/markus-spiske-iar-afB0QQw-unsplash.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Building a breadcrumbs component</h5>
@@ -111,7 +111,7 @@
                       </a>
                     </div>
                     <div class="card">
-                      <a href="#">
+                      <a href="/blogs/blog4.html">
                       <img class="card-img-top" src="./images/blogimages/ray-rui-SyzQ5aByJnE-unsplash.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">JavaScript: What is the meaning of this?</h5>
