--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -19,6 +19,10 @@
         <link rel="stylesheet" href="blogs.css">
     </head>
     <body>
+        <div id="preloader"> 
+            <div id="status">
+            </div> 
+          </div>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
@@ -116,7 +120,25 @@
             </div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        
         <!-- Core theme JS-->
     </body>
 </html>
+<script>
+    function myFunction() {
+      var x = document.getElementById("navbarNav");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+    </script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script    type="text/javascript">
+    $(window).load(function() { // makes sure the whole site is loaded
+    $('#status').fadeOut(); // will first fade out the loading animation
+    $('#preloader').delay(50).fadeOut(100); // will fade out the white DIV that covers the website.
+    $('body').delay(50).css({'overflow':'visible'});
+    })
+    </script>
